raylib-sys/raylib.h

typedef enum
{
    false,
    true
} bool;
// Vector2 type
typedef struct Vector2
{
    float x;
    float y;
} Vector2;
// Vector4 type
typedef struct Vector4
{
    float x;
    float y;
    float z;
    float w;
} Vector4;
// Color type, RGBA (32bit)
typedef struct Color
{
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
// Rectangle type
typedef struct Rectangle
{
    float x;
    float y;
    float width;
    float height;
} Rectangle;
// Image type, bpp always RGBA (32bit)
// NOTE: Data stored in CPU memory (RAM)
typedef struct Image
{
    void *data;  // Image raw data
    int width;   // Image base width
    int height;  // Image base height
    int mipmaps; // Mipmap levels, 1 by default
    int format;  // Data format (PixelFormat type)
} Image;
// Texture2D type
// NOTE: Data stored in GPU memory
typedef struct Texture2D
{
    unsigned int id; // OpenGL texture id
    int width;       // Texture base width
    int height;      // Texture base height
    int mipmaps;     // Mipmap levels, 1 by default
    int format;      // Data format (PixelFormat type)
} Texture2D;
// TextureCubemap type, actually, same as Texture2D
typedef Texture2D TextureCubemap;
// RenderTexture2D type, for texture rendering
typedef struct RenderTexture2D
{
    unsigned int id;   // OpenGL Framebuffer Object (FBO) id
    Texture2D texture; // Color buffer attachment texture
    Texture2D depth;   // Depth buffer attachment texture
    bool depthTexture; // Track if depth attachment is a texture or renderbuffer
} RenderTexture2D;
// Font character info
typedef struct CharInfo
{
    int value;           // Character value (Unicode)
    Rectangle rec;       // Character rectangle in sprite font
    int offsetX;         // Character offset X when drawing
    int offsetY;         // Character offset Y when drawing
    int advanceX;        // Character advance position X
    unsigned char *data; // Character pixel data (grayscale)
} CharInfo;
// Font type, includes texture and charSet array data
typedef struct Font
{
    Texture2D texture; // Font texture
    int baseSize;      // Base size (default chars height)
    int charsCount;    // Number of characters
    CharInfo *chars;   // Characters info data
} Font;
    RLAPI void DrawLineEx(Vector2 startPos, Vector2 endPos, float thick, Color color);                        // Draw a line defining thickness
    RLAPI void DrawLineBezier(Vector2 startPos, Vector2 endPos, float thick, Color color);                    // Draw a line using cubic-bezier curves in-out
    RLAPI void DrawCircle(int centerX, int centerY, float radius, Color color);                               // Draw a color-filled circle
    RLAPI void DrawCircleSector(Vector2 center, float radius, int startAngle, int endAngle, Color color);     // Draw a piece of a circle
    RLAPI void DrawCircleGradient(int centerX, int centerY, float radius, Color color1, Color color2);        // Draw a gradient-filled circle
    RLAPI void DrawCircleV(Vector2 center, float radius, Color color);                                        // Draw a color-filled circle (Vector version)
    RLAPI void DrawCircleLines(int centerX, int centerY, float radius, Color color);                          // Draw circle outline
    RLAPI void DrawRectangle(int posX, int posY, int width, int height, Color color);                         // Draw a color-filled rectangle
    RLAPI void DrawRectangleV(Vector2 position, Vector2 size, Color color);                                   // Draw a color-filled rectangle (Vector version)
    RLAPI void DrawRectangleRec(Rectangle rec, Color color);                                                  // Draw a color-filled rectangle
    RLAPI void DrawRectanglePro(Rectangle rec, Vector2 origin, float rotation, Color color);                  // Draw a color-filled rectangle with pro parameters
    RLAPI void DrawRectangleGradientV(int posX, int posY, int width, int height, Color color1, Color color2); // Draw a vertical-gradient-filled rectangle
    RLAPI void DrawRectangleGradientH(int posX, int posY, int width, int height, Color color1, Color color2); // Draw a horizontal-gradient-filled rectangle
    RLAPI void DrawRectangleGradientEx(Rectangle rec, Color col1, Color col2, Color col3, Color col4);        // Draw a gradient-filled rectangle with custom vertex colors
    RLAPI void DrawRectangleLines(int posX, int posY, int width, int height, Color color);                    // Draw rectangle outline
    RLAPI void DrawRectangleLinesEx(Rectangle rec, int lineThick, Color color);                               // Draw rectangle outline with extended parameters
    RLAPI void DrawTriangle(Vector2 v1, Vector2 v2, Vector2 v3, Color color);                                 // Draw a color-filled triangle
    RLAPI void DrawTriangleLines(Vector2 v1, Vector2 v2, Vector2 v3, Color color);                            // Draw triangle outline
    RLAPI void DrawPoly(Vector2 center, int sides, float radius, float rotation, Color color);                // Draw a regular polygon (Vector version)
    RLAPI void DrawPolyEx(Vector2 *points, int numPoints, Color color);                                       // Draw a closed polygon defined by points
    RLAPI void DrawPolyExLines(Vector2 *points, int numPoints, Color color);                                  // Draw polygon lines
    RLAPI void SetShapesTexture(Texture2D texture, Rectangle source); // Define default texture used to draw shapes
    // Basic shapes collision detection functions
    RLAPI bool CheckCollisionRecs(Rectangle rec1, Rectangle rec2);                                    // Check collision between two rectangles
    RLAPI bool CheckCollisionCircles(Vector2 center1, float radius1, Vector2 center2, float radius2); // Check collision between two circles
    RLAPI bool CheckCollisionCircleRec(Vector2 center, float radius, Rectangle rec);                  // Check collision between circle and rectangle
    RLAPI Rectangle GetCollisionRec(Rectangle rec1, Rectangle rec2);                                  // Get collision rectangle for two rectangles collision
    RLAPI bool CheckCollisionPointRec(Vector2 point, Rectangle rec);                                  // Check if point is inside rectangle
    RLAPI bool CheckCollisionPointCircle(Vector2 point, Vector2 center, float radius);                // Check if point is inside circle
    RLAPI bool CheckCollisionPointTriangle(Vector2 point, Vector2 p1, Vector2 p2, Vector2 p3);        // Check if point is inside a triangle
    //------------------------------------------------------------------------------------
    // Texture Loading and Drawing Functions (Module: textures)
    //------------------------------------------------------------------------------------

    // Image/Texture2D data loading/unloading/saving functions
    RLAPI Image LoadImage(const char *fileName);                                                       // Load image from file into CPU memory (RAM)
    RLAPI Image LoadImageEx(Color *pixels, int width, int height);                                     // Load image from Color array data (RGBA - 32bit)
    RLAPI Image LoadImagePro(void *data, int width, int height, int format);                           // Load image from raw data with parameters
    RLAPI Image LoadImageRaw(const char *fileName, int width, int height, int format, int headerSize); // Load image from RAW file data
    RLAPI void ExportImage(Image image, const char *fileName);                                         // Export image data to file
    RLAPI void ExportImageAsCode(Image image, const char *fileName);                                   // Export image as code file defining an array of bytes
    RLAPI Texture2D LoadTexture(const char *fileName);                                                 // Load texture from file into GPU memory (VRAM)
    RLAPI Texture2D LoadTextureFromImage(Image image);                                                 // Load texture from image data
    RLAPI TextureCubemap LoadTextureCubemap(Image image, int layoutType);                              // Load cubemap from image, multiple image cubemap layouts supported
    RLAPI RenderTexture2D LoadRenderTexture(int width, int height);                                    // Load texture for rendering (framebuffer)
    RLAPI void UnloadImage(Image image);                                                               // Unload image from CPU memory (RAM)
    RLAPI void UnloadTexture(Texture2D texture);                                                       // Unload texture from GPU memory (VRAM)
    RLAPI void UnloadRenderTexture(RenderTexture2D target);                                            // Unload render texture from GPU memory (VRAM)
    RLAPI Color *GetImageData(Image image);                                                            // Get pixel data from image as a Color struct array
    RLAPI Vector4 *GetImageDataNormalized(Image image);                                                // Get pixel data from image as Vector4 array (float normalized)
    RLAPI int GetPixelDataSize(int width, int height, int format);                                     // Get pixel data size in bytes (image or texture)
    RLAPI Image GetTextureData(Texture2D texture);                                                     // Get pixel data from GPU texture and return an Image
    RLAPI void UpdateTexture(Texture2D texture, const void *pixels);                                   // Update GPU texture with new data
    // Image manipulation functions
    RLAPI Image ImageCopy(Image image);                                                                                                // Create an image duplicate (useful for transformations)
    RLAPI void ImageToPOT(Image *image, Color fillColor);                                                                              // Convert image to POT (power-of-two)
    RLAPI void ImageFormat(Image *image, int newFormat);                                                                               // Convert image data to desired format
    RLAPI void ImageAlphaMask(Image *image, Image alphaMask);                                                                          // Apply alpha mask to image
    RLAPI void ImageAlphaClear(Image *image, Color color, float threshold);                                                            // Clear alpha channel to desired color
    RLAPI void ImageAlphaCrop(Image *image, float threshold);                                                                          // Crop image depending on alpha value
    RLAPI void ImageAlphaPremultiply(Image *image);                                                                                    // Premultiply alpha channel
    RLAPI void ImageCrop(Image *image, Rectangle crop);                                                                                // Crop an image to a defined rectangle
    RLAPI void ImageResize(Image *image, int newWidth, int newHeight);                                                                 // Resize image (Bicubic scaling algorithm)
    RLAPI void ImageResizeNN(Image *image, int newWidth, int newHeight);                                                               // Resize image (Nearest-Neighbor scaling algorithm)
    RLAPI void ImageResizeCanvas(Image *image, int newWidth, int newHeight, int offsetX, int offsetY, Color color);                    // Resize canvas and fill with color
    RLAPI void ImageMipmaps(Image *image);                                                                                             // Generate all mipmap levels for a provided image
    RLAPI void ImageDither(Image *image, int rBpp, int gBpp, int bBpp, int aBpp);                                                      // Dither image data to 16bpp or lower (Floyd-Steinberg dithering)
    RLAPI Color *ImageExtractPalette(Image image, int maxPaletteSize, int *extractCount);                                              // Extract color palette from image to maximum size (memory should be freed)
    RLAPI Image ImageText(const char *text, int fontSize, Color color);                                                                // Create an image from text (default font)
    RLAPI Image ImageTextEx(Font font, const char *text, float fontSize, float spacing, Color tint);                                   // Create an image from text (custom sprite font)
    RLAPI void ImageDraw(Image *dst, Image src, Rectangle srcRec, Rectangle dstRec);                                                   // Draw a source image within a destination image
    RLAPI void ImageDrawRectangle(Image *dst, Rectangle rec, Color color);                                                             // Draw rectangle within an image
    RLAPI void ImageDrawRectangleLines(Image *dst, Rectangle rec, int thick, Color color);                                             // Draw rectangle lines within an image
    RLAPI void ImageDrawText(Image *dst, Vector2 position, const char *text, int fontSize, Color color);                               // Draw text (default font) within an image (destination)
    RLAPI void ImageDrawTextEx(Image *dst, Vector2 position, Font font, const char *text, float fontSize, float spacing, Color color); // Draw text (custom sprite font) within an image (destination)
    RLAPI void ImageFlipVertical(Image *image);                                                                                        // Flip image vertically