raylib-sys/bindings_osx.rs

extern "C" {
    #[link_name = "\u{1}_DrawLineEx"]
    pub fn DrawLineEx(startPos: Vector2, endPos: Vector2, thick: f32, color: Color);
}
extern "C" {
    #[link_name = "\u{1}_DrawLineBezier"]
    pub fn DrawLineBezier(startPos: Vector2, endPos: Vector2, thick: f32, color: Color);
}
extern "C" {
    #[link_name = "\u{1}_DrawCircle"]
    pub fn DrawCircle(
        centerX: ::std::os::raw::c_int,
        centerY: ::std::os::raw::c_int,
        radius: f32,
        color: Color,
    );
}
extern "C" {
    #[link_name = "\u{1}_DrawCircleSector"]
    pub fn DrawCircleSector(
        center: Vector2,
        radius: f32,
        startAngle: ::std::os::raw::c_int,
        endAngle: ::std::os::raw::c_int,
        color: Color,
    );
}
extern "C" {
    #[link_name = "\u{1}_DrawCircleGradient"]
    pub fn DrawCircleGradient(
        centerX: ::std::os::raw::c_int,
        centerY: ::std::os::raw::c_int,
        radius: f32,
        color1: Color,
        color2: Color,
    );
}
extern "C" {
    #[link_name = "\u{1}_DrawCircleV"]
    pub fn DrawCircleV(center: Vector2, radius: f32, color: Color);
}
extern "C" {
    #[link_name = "\u{1}_DrawCircleLines"]
    pub fn DrawCircleLines(
        centerX: ::std::os::raw::c_int,
        centerY: ::std::os::raw::c_int,
        radius: f32,
        color: Color,
    );
}
extern "C" {
    #[link_name = "\u{1}_DrawRectangle"]
    pub fn DrawRectangle(
        posX: ::std::os::raw::c_int,
        posY: ::std::os::raw::c_int,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        color: Color,
    );
}
extern "C" {
    #[link_name = "\u{1}_DrawRectangleV"]
    pub fn DrawRectangleV(position: Vector2, size: Vector2, color: Color);
}
extern "C" {
    #[link_name = "\u{1}_DrawRectangleRec"]
    pub fn DrawRectangleRec(rec: Rectangle, color: Color);
}
extern "C" {
    #[link_name = "\u{1}_DrawRectanglePro"]
    pub fn DrawRectanglePro(rec: Rectangle, origin: Vector2, rotation: f32, color: Color);
}
extern "C" {
    #[link_name = "\u{1}_DrawRectangleGradientV"]
    pub fn DrawRectangleGradientV(
        posX: ::std::os::raw::c_int,
        posY: ::std::os::raw::c_int,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        color1: Color,
        color2: Color,
    );
}
extern "C" {
    #[link_name = "\u{1}_DrawRectangleGradientH"]
    pub fn DrawRectangleGradientH(
        posX: ::std::os::raw::c_int,
        posY: ::std::os::raw::c_int,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        color1: Color,
        color2: Color,
    );
}
extern "C" {
    #[link_name = "\u{1}_DrawRectangleGradientEx"]
    pub fn DrawRectangleGradientEx(
        rec: Rectangle,
        col1: Color,
        col2: Color,
        col3: Color,
        col4: Color,
    );
}
extern "C" {
    #[link_name = "\u{1}_DrawRectangleLines"]
    pub fn DrawRectangleLines(
        posX: ::std::os::raw::c_int,
        posY: ::std::os::raw::c_int,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        color: Color,
    );
}
extern "C" {
    #[link_name = "\u{1}_DrawRectangleLinesEx"]
    pub fn DrawRectangleLinesEx(rec: Rectangle, lineThick: ::std::os::raw::c_int, color: Color);
}
extern "C" {
    #[link_name = "\u{1}_DrawTriangle"]
    pub fn DrawTriangle(v1: Vector2, v2: Vector2, v3: Vector2, color: Color);
}
extern "C" {
    #[link_name = "\u{1}_DrawTriangleLines"]
    pub fn DrawTriangleLines(v1: Vector2, v2: Vector2, v3: Vector2, color: Color);
}
extern "C" {
    #[link_name = "\u{1}_DrawPoly"]
    pub fn DrawPoly(
        center: Vector2,
        sides: ::std::os::raw::c_int,
        radius: f32,
        rotation: f32,
        color: Color,
    );
}
extern "C" {
    #[link_name = "\u{1}_DrawPolyEx"]
    pub fn DrawPolyEx(points: *mut Vector2, numPoints: ::std::os::raw::c_int, color: Color);
}
extern "C" {
    #[link_name = "\u{1}_DrawPolyExLines"]
    pub fn DrawPolyExLines(points: *mut Vector2, numPoints: ::std::os::raw::c_int, color: Color);
}
extern "C" {
    #[link_name = "\u{1}_SetShapesTexture"]
    pub fn SetShapesTexture(texture: Texture2D, source: Rectangle);
}
extern "C" {
    #[link_name = "\u{1}_CheckCollisionRecs"]
    pub fn CheckCollisionRecs(rec1: Rectangle, rec2: Rectangle) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_CheckCollisionCircles"]
    pub fn CheckCollisionCircles(
        center1: Vector2,
        radius1: f32,
        center2: Vector2,
        radius2: f32,
    ) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_CheckCollisionCircleRec"]
    pub fn CheckCollisionCircleRec(center: Vector2, radius: f32, rec: Rectangle) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_GetCollisionRec"]
    pub fn GetCollisionRec(rec1: Rectangle, rec2: Rectangle) -> Rectangle;
}
extern "C" {
    #[link_name = "\u{1}_CheckCollisionPointRec"]
    pub fn CheckCollisionPointRec(point: Vector2, rec: Rectangle) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_CheckCollisionPointCircle"]
    pub fn CheckCollisionPointCircle(point: Vector2, center: Vector2, radius: f32) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_CheckCollisionPointTriangle"]
    pub fn CheckCollisionPointTriangle(
        point: Vector2,
        p1: Vector2,
        p2: Vector2,
        p3: Vector2,
    ) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_LoadImage"]
    pub fn LoadImage(fileName: *const ::std::os::raw::c_char) -> Image;
}
extern "C" {
    #[link_name = "\u{1}_LoadImageEx"]
    pub fn LoadImageEx(
        pixels: *mut Color,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
    ) -> Image;
}
extern "C" {
    #[link_name = "\u{1}_LoadImagePro"]
    pub fn LoadImagePro(
        data: *mut ::std::os::raw::c_void,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        format: ::std::os::raw::c_int,
    ) -> Image;
}
extern "C" {
    #[link_name = "\u{1}_LoadImageRaw"]
    pub fn LoadImageRaw(
        fileName: *const ::std::os::raw::c_char,
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        format: ::std::os::raw::c_int,
        headerSize: ::std::os::raw::c_int,
    ) -> Image;
}
extern "C" {
    #[link_name = "\u{1}_ExportImage"]
    pub fn ExportImage(image: Image, fileName: *const ::std::os::raw::c_char);
}
extern "C" {
    #[link_name = "\u{1}_ExportImageAsCode"]
    pub fn ExportImageAsCode(image: Image, fileName: *const ::std::os::raw::c_char);
}
extern "C" {
    #[link_name = "\u{1}_LoadTexture"]
    pub fn LoadTexture(fileName: *const ::std::os::raw::c_char) -> Texture2D;
}
extern "C" {
    #[link_name = "\u{1}_LoadTextureFromImage"]
    pub fn LoadTextureFromImage(image: Image) -> Texture2D;
}
extern "C" {
    #[link_name = "\u{1}_LoadTextureCubemap"]
    pub fn LoadTextureCubemap(image: Image, layoutType: ::std::os::raw::c_int) -> TextureCubemap;
}
extern "C" {
    #[link_name = "\u{1}_LoadRenderTexture"]
    pub fn LoadRenderTexture(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
    ) -> RenderTexture2D;
}
extern "C" {
    #[link_name = "\u{1}_UnloadImage"]
    pub fn UnloadImage(image: Image);
}
extern "C" {
    #[link_name = "\u{1}_UnloadTexture"]
    pub fn UnloadTexture(texture: Texture2D);
}
extern "C" {
    #[link_name = "\u{1}_UnloadRenderTexture"]
    pub fn UnloadRenderTexture(target: RenderTexture2D);
}
extern "C" {
    #[link_name = "\u{1}_GetImageData"]
    pub fn GetImageData(image: Image) -> *mut Color;
}
extern "C" {
    #[link_name = "\u{1}_GetImageDataNormalized"]
    pub fn GetImageDataNormalized(image: Image) -> *mut Vector4;
}
extern "C" {
    #[link_name = "\u{1}_GetPixelDataSize"]
    pub fn GetPixelDataSize(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        format: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetTextureData"]
    pub fn GetTextureData(texture: Texture2D) -> Image;
}
extern "C" {
    #[link_name = "\u{1}_UpdateTexture"]
    pub fn UpdateTexture(texture: Texture2D, pixels: *const ::std::os::raw::c_void);
}
extern "C" {
    #[link_name = "\u{1}_ImageCopy"]
    pub fn ImageCopy(image: Image) -> Image;
}
extern "C" {
    #[link_name = "\u{1}_ImageToPOT"]
    pub fn ImageToPOT(image: *mut Image, fillColor: Color);
}
extern "C" {
    #[link_name = "\u{1}_ImageFormat"]
    pub fn ImageFormat(image: *mut Image, newFormat: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "\u{1}_ImageAlphaMask"]
    pub fn ImageAlphaMask(image: *mut Image, alphaMask: Image);
}
extern "C" {
    #[link_name = "\u{1}_ImageAlphaClear"]
    pub fn ImageAlphaClear(image: *mut Image, color: Color, threshold: f32);
}
extern "C" {
    #[link_name = "\u{1}_ImageAlphaCrop"]
    pub fn ImageAlphaCrop(image: *mut Image, threshold: f32);
}
extern "C" {
    #[link_name = "\u{1}_ImageAlphaPremultiply"]
    pub fn ImageAlphaPremultiply(image: *mut Image);
}
extern "C" {
    #[link_name = "\u{1}_ImageCrop"]
    pub fn ImageCrop(image: *mut Image, crop: Rectangle);
}
extern "C" {
    #[link_name = "\u{1}_ImageResize"]
    pub fn ImageResize(
        image: *mut Image,
        newWidth: ::std::os::raw::c_int,
        newHeight: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[link_name = "\u{1}_ImageResizeNN"]
    pub fn ImageResizeNN(
        image: *mut Image,
        newWidth: ::std::os::raw::c_int,
        newHeight: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[link_name = "\u{1}_ImageResizeCanvas"]
    pub fn ImageResizeCanvas(
        image: *mut Image,
        newWidth: ::std::os::raw::c_int,
        newHeight: ::std::os::raw::c_int,
        offsetX: ::std::os::raw::c_int,
        offsetY: ::std::os::raw::c_int,
        color: Color,
    );
}
extern "C" {
    #[link_name = "\u{1}_ImageMipmaps"]
    pub fn ImageMipmaps(image: *mut Image);
}
extern "C" {
    #[link_name = "\u{1}_ImageDither"]
    pub fn ImageDither(
        image: *mut Image,
        rBpp: ::std::os::raw::c_int,
        gBpp: ::std::os::raw::c_int,
        bBpp: ::std::os::raw::c_int,
        aBpp: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[link_name = "\u{1}_ImageExtractPalette"]
    pub fn ImageExtractPalette(
        image: Image,
        maxPaletteSize: ::std::os::raw::c_int,
        extractCount: *mut ::std::os::raw::c_int,
    ) -> *mut Color;
}
extern "C" {
    #[link_name = "\u{1}_ImageText"]
    pub fn ImageText(
        text: *const ::std::os::raw::c_char,
        fontSize: ::std::os::raw::c_int,
        color: Color,
    ) -> Image;
}
extern "C" {
    #[link_name = "\u{1}_ImageTextEx"]
    pub fn ImageTextEx(
        font: Font,
        text: *const ::std::os::raw::c_char,
        fontSize: f32,
        spacing: f32,
        tint: Color,
    ) -> Image;
}
extern "C" {
    #[link_name = "\u{1}_ImageDraw"]
    pub fn ImageDraw(dst: *mut Image, src: Image, srcRec: Rectangle, dstRec: Rectangle);
}
extern "C" {
    #[link_name = "\u{1}_ImageDrawRectangle"]
    pub fn ImageDrawRectangle(dst: *mut Image, rec: Rectangle, color: Color);
}
extern "C" {
    #[link_name = "\u{1}_ImageDrawRectangleLines"]
    pub fn ImageDrawRectangleLines(
        dst: *mut Image,
        rec: Rectangle,
        thick: ::std::os::raw::c_int,
        color: Color,
    );
}
extern "C" {
    #[link_name = "\u{1}_ImageDrawText"]
    pub fn ImageDrawText(
        dst: *mut Image,
        position: Vector2,
        text: *const ::std::os::raw::c_char,
        fontSize: ::std::os::raw::c_int,
        color: Color,
    );
}
extern "C" {
    #[link_name = "\u{1}_ImageDrawTextEx"]
    pub fn ImageDrawTextEx(
        dst: *mut Image,
        position: Vector2,
        font: Font,
        text: *const ::std::os::raw::c_char,
        fontSize: f32,
        spacing: f32,
        color: Color,
    );
}
extern "C" {
    #[link_name = "\u{1}_ImageFlipVertical"]
    pub fn ImageFlipVertical(image: *mut Image);
}
